# NeuroScientificAgent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  docker-compose.yml  local.yaml.example  requirements.txt  start.sh
.claude/: settings.json
.claude/agents/: experimentalist.md  theorist.md  writer.md
.claude/teams/: role_tool_templates.yaml
backend/: pyproject.toml  requirements.txt
backend/src/: config.py  main.py
backend/src/api/: auth.py  chat.py  files.py  papers.py  pdf.py  projects.py  sandboxes.py  sessions.py  skills.py  tasks.py  websocket.py
backend/src/services/: claude_code.py  claude_sdk.py  file_manager.py  paper_search.py  pdf_reader.py  sandbox_manager.py  sandbox_service.py  session_manager.py  session_store.py  tools.py
claude/: CLAUDE.md  settings.local.json
claude/agents/: analyst.md  principal.md  theorist.md
claude/prompts/: orchestrator.md
deprecated/mas-frontend/: package-lock.json  package.json  vite.config.ts
docker/: download_deps.sh  env.production  main.Dockerfile  main.Dockerfile.dockerignore  main.dockerignore  nginx.conf  requirements.txt  sandbox-entrypoint.sh  sandbox-requirements.txt  sandbox.Dockerfile  sandbox.Dockerfile.dockerignore  sandbox.dockerignore
docker/offline-deps/: .gitignore
docs/: mcp-setup.md
docs/analysis/: claude-code-capability-analysis.md
docs/plans/: 2026-03-06-frontend-backend-integration-design.md  (+16 more)
frontend/: index.html  package-lock.json  package.json
sandbox/: agentic_loop.py  api.py  tools.py
temp_workspace/: .gitignore
(+84 files in other folders)
