[tool.poetry]
name = "mas-backend"
version = "0.1.0"
description = "Multi-Agent Scientific Operating System Backend"
authors = ["MAS Team"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
sse-starlette = "^2.0.0"
python-multipart = "^0.0.20"
requests = "^2.32.5"
pymupdf = "^1.27.1"
anthropic = "^0.84.0"
python-jose = "^3.5.0"
cryptography = "^46.0.5"
passlib = "^1.7.4"
bcrypt = "4.0.1"
httpx = ">=0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
